@@ -21,7 +21,6 @@
 				"classes": [
 					"mw.Title",
 					"mw.Uri",
-					"mw.RegExp",
 					"mw.String",
 					"mw.messagePoster.*",
 					"mw.notification",
