@@ -10,7 +10,7 @@
 			if ( mw.config.get( 'wgTranslateNumerals' ) ) {
 				for ( i = 0; i < 10; i++ ) {
 					if ( table[ i ] !== undefined ) {
-						s = s.replace( new RegExp( mw.RegExp.escape( table[ i ] ), 'g' ), i );
+						s = s.replace( new RegExp( mw.util.escapeRegExp( table[ i ] ), 'g' ), i );
 					}
 				}
 			}
